Working mac build + updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Not visual studio ;)
+
+# Don't include mac build data :p
+fcar/fcar/target/*
+
 #################
 ## Visual Studio
 #################
