--- a/fcar/fcar/fargo.toml
+++ b/fcar/fcar/fargo.toml
@@ -15,9 +15,9 @@ dependencies = [
 
 # The order of these is important!
 # (Maybe I'll add a dependency graph at some point)
-modules = [ 
-    "TestPlatformerActor",
-    "TestPlatformerPhysics", #requires actor
-    "TestPlatformerInput", #requires actor
-    "TestPlatformerGame", #requires all three
+modules = [
+    "CarActor",
+    "CarPhysics",
+    "CarInput",
+    "CarGame",
 ]
